--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oğuzhan Ihlamur Blog</title>
+    <link rel="icon" href="assets/antozy-logo.svg" />
   </head>
 
   <body>
